src/DAPLParser.py
# Generated from DAPL.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class DAPLParser ( Parser ):

    grammarFileName = "DAPL.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'import'", "';'", "'from'", "'{'", "'}'", 
                     "'var'", "':'", "'='", "'List'", "'<'", "'>'", "'Table'", 
                     "'read_csv'", "'('", "')'", "'.'", "'save'", "','", 
                     "'['", "']'", "'filter'", "'apply'", "'addColumn'", 
                     "'addRow'", "'drop'", "'join'", "'groupBy'", "'max'", 
                     "'min'", "'count'", "'average'", "'sum'", "'show'", 
                     "'()'", "'function'", "'void'", "'return'", "'out'", 
                     "'null'", "'true'", "'false'", "'*'", "'/'", "'/!'", 
                     "'+'", "'-'", "'%'", "'^'", "'int'", "'double'", "'char'", 
                     "'string'", "'bool'", "'auto'", "'if'", "'elif'", "'else'", 
                     "'while'", "'for'", "'=='", "'>='", "'<='", "'!='", 
                     "'=>'", "'and'", "'or'", "'!'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "AND", "OR", "NOT", "BlockComment", "LineComment", 
                      "INT", "DOUBLE", "NAME", "TEXT", "WS" ]

    RULE_start = 0
    RULE_line = 1
    RULE_im = 2
    RULE_statement = 3
    RULE_scope = 4
    RULE_dec = 5
    RULE_saveTable = 6
    RULE_columnList = 7
    RULE_column = 8
    RULE_table = 9
    RULE_row = 10
    RULE_tableAction = 11
    RULE_tableOperation = 12
    RULE_agregation = 13
    RULE_terminalTableOperation = 14
    RULE_funcDec = 15
    RULE_paramList = 16
    RULE_param = 17
    RULE_functionCall = 18
    RULE_argList = 19
    RULE_returnStatement = 20
    RULE_print = 21
    RULE_value = 22
    RULE_bool = 23
    RULE_expr = 24
    RULE_type = 25
    RULE_boolExpr = 26
    RULE_orExpr = 27
    RULE_andExpr = 28
    RULE_notExpr = 29
    RULE_primaryBoolExpr = 30
    RULE_ifStatement = 31
    RULE_elifStatement = 32
    RULE_elseStatement = 33
    RULE_whileStatement = 34
    RULE_comparasion = 35
    RULE_forStatement = 36
    RULE_operator = 37
    RULE_assign = 38
    RULE_lambdaExpr = 39

    ruleNames =  [ "start", "line", "im", "statement", "scope", "dec", "saveTable", 
                   "columnList", "column", "table", "row", "tableAction", 
                   "tableOperation", "agregation", "terminalTableOperation", 
                   "funcDec", "paramList", "param", "functionCall", "argList", 
                   "returnStatement", "print", "value", "bool", "expr", 
                   "type", "boolExpr", "orExpr", "andExpr", "notExpr", "primaryBoolExpr", 
                   "ifStatement", "elifStatement", "elseStatement", "whileStatement", 
                   "comparasion", "forStatement", "operator", "assign", 
                   "lambdaExpr" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    T__20=21
    T__21=22
    T__22=23
    T__23=24
    T__24=25
    T__25=26
    T__26=27
    T__27=28
    T__28=29
    T__29=30
    T__30=31
    T__31=32
    T__32=33
    T__33=34
    T__34=35
    T__35=36
    T__36=37
    T__37=38
    T__38=39
    T__39=40
    T__40=41
    T__41=42
    T__42=43
    T__43=44
    T__44=45
    T__45=46
    T__46=47
    T__47=48
    T__48=49
    T__49=50
    T__50=51
    T__51=52
    T__52=53
    T__53=54
    T__54=55
    T__55=56
    T__56=57
    T__57=58
    T__58=59
    T__59=60
    T__60=61
    T__61=62
    T__62=63
    T__63=64
    AND=65
    OR=66
    NOT=67
    BlockComment=68
    LineComment=69
    INT=70
    DOUBLE=71
    NAME=72
    TEXT=73
    WS=74

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class StartContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(DAPLParser.EOF, 0)

        def line(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(DAPLParser.LineContext)
            else:
                return self.getTypedRuleContext(DAPLParser.LineContext,i)


        def getRuleIndex(self):
            return DAPLParser.RULE_start

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStart" ):
                listener.enterStart(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStart" ):
                listener.exitStart(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStart" ):
                return visitor.visitStart(self)
            else:
                return visitor.visitChildren(self)




    def start(self):

        localctx = DAPLParser.StartContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_start)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 81 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 80
                self.line()
                self.state = 83 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & 936467694192955994) != 0) or ((((_la - 68)) & ~0x3f) == 0 and ((1 << (_la - 68)) & 19) != 0)):
                    break

            self.state = 85
            self.match(DAPLParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class LineContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def im(self):
            return self.getTypedRuleContext(DAPLParser.ImContext,0)


        def dec(self):
            return self.getTypedRuleContext(DAPLParser.DecContext,0)


        def assign(self):
            return self.getTypedRuleContext(DAPLParser.AssignContext,0)


        def print_(self):
            return self.getTypedRuleContext(DAPLParser.PrintContext,0)


        def statement(self):
            return self.getTypedRuleContext(DAPLParser.StatementContext,0)


        def funcDec(self):
            return self.getTypedRuleContext(DAPLParser.FuncDecContext,0)


        def tableAction(self):
            return self.getTypedRuleContext(DAPLParser.TableActionContext,0)


        def saveTable(self):
            return self.getTypedRuleContext(DAPLParser.SaveTableContext,0)


        def BlockComment(self):
            return self.getToken(DAPLParser.BlockComment, 0)

        def LineComment(self):
            return self.getToken(DAPLParser.LineComment, 0)

        def getRuleIndex(self):
            return DAPLParser.RULE_line

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLine" ):
                listener.enterLine(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLine" ):
                listener.exitLine(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLine" ):
                return visitor.visitLine(self)
            else:
                return visitor.visitChildren(self)




    def line(self):

        localctx = DAPLParser.LineContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_line)
        try:
            self.state = 97
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 87
                self.im()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 88
                self.dec()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 89
                self.assign()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 90
                self.print_()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 91
                self.statement()
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 92
                self.funcDec()
                pass

            elif la_ == 7:
                self.enterOuterAlt(localctx, 7)
                self.state = 93
                self.tableAction()
                pass

            elif la_ == 8:
                self.enterOuterAlt(localctx, 8)
                self.state = 94
                self.saveTable()
                pass

            elif la_ == 9:
                self.enterOuterAlt(localctx, 9)
                self.state = 95
                self.match(DAPLParser.BlockComment)
                pass

            elif la_ == 10:
                self.enterOuterAlt(localctx, 10)
                self.state = 96
                self.match(DAPLParser.LineComment)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ImContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return DAPLParser.RULE_im

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class Im1Context(ImContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a DAPLParser.ImContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def NAME(self):
            return self.getToken(DAPLParser.NAME, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIm1" ):
                listener.enterIm1(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIm1" ):
                listener.exitIm1(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIm1" ):
                return visitor.visitIm1(self)
            else:
                return visitor.visitChildren(self)


    class Im2Context(ImContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a DAPLParser.ImContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def NAME(self, i:int=None):
            if i is None:
                return self.getTokens(DAPLParser.NAME)
            else:
                return self.getToken(DAPLParser.NAME, i)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIm2" ):
                listener.enterIm2(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIm2" ):
                listener.exitIm2(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIm2" ):
                return visitor.visitIm2(self)
            else:
                return visitor.visitChildren(self)



    def im(self):

        localctx = DAPLParser.ImContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_im)
        try:
            self.state = 107
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [1]:
                localctx = DAPLParser.Im1Context(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 99
                self.match(DAPLParser.T__0)
                self.state = 100
                self.match(DAPLParser.NAME)
                self.state = 101
                self.match(DAPLParser.T__1)
                pass
            elif token in [3]:
                localctx = DAPLParser.Im2Context(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 102
                self.match(DAPLParser.T__2)
                self.state = 103
                self.match(DAPLParser.NAME)
                self.state = 104
                self.match(DAPLParser.T__0)
                self.state = 105
                self.match(DAPLParser.NAME)
                self.state = 106
                self.match(DAPLParser.T__1)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def scope(self):
            return self.getTypedRuleContext(DAPLParser.ScopeContext,0)


        def ifStatement(self):
            return self.getTypedRuleContext(DAPLParser.IfStatementContext,0)


        def whileStatement(self):
            return self.getTypedRuleContext(DAPLParser.WhileStatementContext,0)


        def forStatement(self):
            return self.getTypedRuleContext(DAPLParser.ForStatementContext,0)


        def functionCall(self):
            return self.getTypedRuleContext(DAPLParser.FunctionCallContext,0)


        def returnStatement(self):
            return self.getTypedRuleContext(DAPLParser.ReturnStatementContext,0)


        def getRuleIndex(self):
            return DAPLParser.RULE_statement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStatement" ):
                listener.enterStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStatement" ):
                listener.exitStatement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStatement" ):
                return visitor.visitStatement(self)
            else:
                return visitor.visitChildren(self)




    def statement(self):

        localctx = DAPLParser.StatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_statement)
        try:
            self.state = 115
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [4]:
                self.enterOuterAlt(localctx, 1)
                self.state = 109
                self.scope()
                pass
            elif token in [55]:
                self.enterOuterAlt(localctx, 2)
                self.state = 110
                self.ifStatement()
                pass
            elif token in [58]:
                self.enterOuterAlt(localctx, 3)
                self.state = 111
                self.whileStatement()
                pass
            elif token in [59]:
                self.enterOuterAlt(localctx, 4)
                self.state = 112
                self.forStatement()
                pass
            elif token in [72]:
                self.enterOuterAlt(localctx, 5)
                self.state = 113
                self.functionCall()
                pass
            elif token in [37]:
                self.enterOuterAlt(localctx, 6)
                self.state = 114
                self.returnStatement()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ScopeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def line(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(DAPLParser.LineContext)
            else:
                return self.getTypedRuleContext(DAPLParser.LineContext,i)


        def getRuleIndex(self):
            return DAPLParser.RULE_scope

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterScope" ):
                listener.enterScope(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitScope" ):
                listener.exitScope(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitScope" ):
                return visitor.visitScope(self)
            else:
                return visitor.visitChildren(self)




    def scope(self):

        localctx = DAPLParser.ScopeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_scope)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 117
            self.match(DAPLParser.T__3)
            self.state = 121
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 936467694192955994) != 0) or ((((_la - 68)) & ~0x3f) == 0 and ((1 << (_la - 68)) & 19) != 0):
                self.state = 118
                self.line()
                self.state = 123
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 124
            self.match(DAPLParser.T__4)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DecContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return DAPLParser.RULE_dec

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class Read_csvContext(DecContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a DAPLParser.DecContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def NAME(self):
            return self.getToken(DAPLParser.NAME, 0)
        def TEXT(self):
            return self.getToken(DAPLParser.TEXT, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterRead_csv" ):
                listener.enterRead_csv(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitRead_csv" ):
                listener.exitRead_csv(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitRead_csv" ):
                return visitor.visitRead_csv(self)
            else:
                return visitor.visitChildren(self)


    class VarDecInitValueContext(DecContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a DAPLParser.DecContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def type_(self):
            return self.getTypedRuleContext(DAPLParser.TypeContext,0)

        def NAME(self):
            return self.getToken(DAPLParser.NAME, 0)
        def value(self):
            return self.getTypedRuleContext(DAPLParser.ValueContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVarDecInitValue" ):
                listener.enterVarDecInitValue(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVarDecInitValue" ):
                listener.exitVarDecInitValue(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVarDecInitValue" ):
                return visitor.visitVarDecInitValue(self)
            else:
                return visitor.visitChildren(self)


    class TableDecContext(DecContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a DAPLParser.DecContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def columnList(self):
            return self.getTypedRuleContext(DAPLParser.ColumnListContext,0)

        def NAME(self):
            return self.getToken(DAPLParser.NAME, 0)
        def table(self):
            return self.getTypedRuleContext(DAPLParser.TableContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTableDec" ):
                listener.enterTableDec(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTableDec" ):
                listener.exitTableDec(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTableDec" ):
                return visitor.visitTableDec(self)
            else:
                return visitor.visitChildren(self)


    class ConstDecContext(DecContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a DAPLParser.DecContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def type_(self):
            return self.getTypedRuleContext(DAPLParser.TypeContext,0)

        def NAME(self):
            return self.getToken(DAPLParser.NAME, 0)
        def value(self):
            return self.getTypedRuleContext(DAPLParser.ValueContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterConstDec" ):
                listener.enterConstDec(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitConstDec" ):
                listener.exitConstDec(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitConstDec" ):
                return visitor.visitConstDec(self)
            else:
                return visitor.visitChildren(self)


    class ListDecContext(DecContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a DAPLParser.DecContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def type_(self):
            return self.getTypedRuleContext(DAPLParser.TypeContext,0)

        def NAME(self):
            return self.getToken(DAPLParser.NAME, 0)
        def row(self):
            return self.getTypedRuleContext(DAPLParser.RowContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterListDec" ):
                listener.enterListDec(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitListDec" ):
                listener.exitListDec(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitListDec" ):
                return visitor.visitListDec(self)
            else:
                return visitor.visitChildren(self)


    class EmptyTableDecContext(DecContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a DAPLParser.DecContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def columnList(self):
            return self.getTypedRuleContext(DAPLParser.ColumnListContext,0)

        def NAME(self):
            return self.getToken(DAPLParser.NAME, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterEmptyTableDec" ):
                listener.enterEmptyTableDec(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitEmptyTableDec" ):
                listener.exitEmptyTableDec(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitEmptyTableDec" ):
                return visitor.visitEmptyTableDec(self)
            else:
                return visitor.visitChildren(self)


    class TableDec2Context(DecContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a DAPLParser.DecContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def NAME(self):
            return self.getToken(DAPLParser.NAME, 0)
        def table(self):
            return self.getTypedRuleContext(DAPLParser.TableContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTableDec2" ):
                listener.enterTableDec2(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTableDec2" ):
                listener.exitTableDec2(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTableDec2" ):
                return visitor.visitTableDec2(self)
            else:
                return visitor.visitChildren(self)


    class VarDecDefaultValueContext(DecContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a DAPLParser.DecContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def type_(self):
            return self.getTypedRuleContext(DAPLParser.TypeContext,0)

        def NAME(self):
            return self.getToken(DAPLParser.NAME, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVarDecDefaultValue" ):
                listener.enterVarDecDefaultValue(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVarDecDefaultValue" ):
                listener.exitVarDecDefaultValue(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVarDecDefaultValue" ):
                return visitor.visitVarDecDefaultValue(self)
            else:
                return visitor.visitChildren(self)


    class EmptyListDecContext(DecContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a DAPLParser.DecContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def type_(self):
            return self.getTypedRuleContext(DAPLParser.TypeContext,0)

        def NAME(self):
            return self.getToken(DAPLParser.NAME, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterEmptyListDec" ):
                listener.enterEmptyListDec(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitEmptyListDec" ):
                listener.exitEmptyListDec(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitEmptyListDec" ):
                return visitor.visitEmptyListDec(self)
            else:
                return visitor.visitChildren(self)



    def dec(self):

        localctx = DAPLParser.DecContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_dec)
        try:
            self.state = 193
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,5,self._ctx)
            if la_ == 1:
                localctx = DAPLParser.VarDecDefaultValueContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 126
                self.match(DAPLParser.T__5)
                self.state = 127
                self.type_()
                self.state = 128
                self.match(DAPLParser.T__6)
                self.state = 129
                self.match(DAPLParser.NAME)
                self.state = 130
                self.match(DAPLParser.T__1)
                pass

            elif la_ == 2:
                localctx = DAPLParser.VarDecInitValueContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 132
                self.match(DAPLParser.T__5)
                self.state = 133
                self.type_()
                self.state = 134
                self.match(DAPLParser.T__6)
                self.state = 135
                self.match(DAPLParser.NAME)
                self.state = 136
                self.match(DAPLParser.T__7)
                self.state = 137
                self.value()
                self.state = 138
                self.match(DAPLParser.T__1)
                pass

            elif la_ == 3:
                localctx = DAPLParser.ConstDecContext(self, localctx)
                self.enterOuterAlt(localctx, 3)
                self.state = 140
                self.type_()
                self.state = 141
                self.match(DAPLParser.T__6)
                self.state = 142
                self.match(DAPLParser.NAME)
                self.state = 143
                self.match(DAPLParser.T__7)
                self.state = 144
                self.value()
                self.state = 145
                self.match(DAPLParser.T__1)
                pass

            elif la_ == 4:
                localctx = DAPLParser.EmptyListDecContext(self, localctx)
                self.enterOuterAlt(localctx, 4)
                self.state = 147
                self.match(DAPLParser.T__8)
                self.state = 148
                self.match(DAPLParser.T__9)
                self.state = 149
                self.type_()
                self.state = 150
                self.match(DAPLParser.T__10)
                self.state = 151
                self.match(DAPLParser.NAME)
                self.state = 152
                self.match(DAPLParser.T__1)
                pass

            elif la_ == 5:
                localctx = DAPLParser.ListDecContext(self, localctx)
                self.enterOuterAlt(localctx, 5)
                self.state = 154
                self.match(DAPLParser.T__8)
                self.state = 155
                self.match(DAPLParser.T__9)
                self.state = 156
                self.type_()
                self.state = 157
                self.match(DAPLParser.T__10)
                self.state = 158
                self.match(DAPLParser.NAME)
                self.state = 159
                self.match(DAPLParser.T__7)
                self.state = 160
                self.row()
                self.state = 161
                self.match(DAPLParser.T__1)
                pass
